--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Start Template</title>
-  <link rel="stylesheet" href="all.css">
-  <script src="common.js" defer></script>
+  <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
-  <p>Start Developer Template !</p>
+  <p class="title">Start Developer Template !</p>
 </body>
 </html>
