--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Start Template</title>
   <link rel="stylesheet" href="css/styles.min.css">
+  <script src="js/scripts.min.js" defer></script>
 </head>
 <body>
   <p class="title">Start Developer Template !</p>
